--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.11.18",
+    "node-cron": "^2.0.3",
     "twilio": "^3.56.0"
   }
 }
