--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "Justin",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.4.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.18",
     "node-cron": "^2.0.3",
+    "sendgrid": "^5.2.3",
     "twilio": "^3.56.0"
   },
   "devDependencies": {
