--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "birthday-app-twilio",
   "version": "1.0.0",
   "description": "Send text messages to our birthday app users",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./index.js"
+    "dev": "nodemon ./server.js",
+    "start": "node ./server.js"
   },
   "author": "Justin",
   "license": "ISC",
